# neuro

./: CMakeLists.txt  README.md  main.c  neurotron.c  neurotron.h
.github/workflows/: cmake-multi-platform.yml
archive/: old-sdl-visualization.c
neurotron/: main.c  neurotron.c  neurotron.h  utilities.c  utilities.h
visualizer/: main.cpp
